# power-timer

./: .gitignore  CLAUDE.md  README.md  build.sh  meson.build  release.sh
data/: com.example.TimedShutdown.desktop  in.rahulbali.PowerTimer.desktop  in.rahulbali.TimedShutdown.desktop
src/: main.c  power.c  power_timer.h  sound.c  timer.c  ui.c
